<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My_Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_edit_message">Entrer le text à envoyer</string>
    <string name="string_android_send">send</string>
    <string name="string_android_create_map">Créer une carte</string>
    <string name='string_android_delete_map'>Supprimer des cartes</string>
    <string name="string_next">Suivant</string>
    <string name="string_enter_map_name">Entrer le nom de la carte</string>
    <string name="string_accueil">Annuler retour accueil</string>
    <string name="string_android_load_map">Charger une carte</string>
    <string name="string_hm_vertex">Combien de\ndestinations possibles?</string>
    <string name="title_activity_display_message">Display_message</string>
    <string name="string_enter_vertex_name">Entrer le nom de la destination</string>
    <string name="string_nb_vertex_left">Nombre de destinations à rentrer: </string>
    <string name="string_vers_la_destination">Vers la destination: </string>
    <string name="string_wich_vertex">Quel destination?</string>
    <string name="string_enter_edge_description">Rentrer la description du chemin</string>
    <string name="string_record_audio">Enregistrer la description audio</string>
    <string name="string_edge_lenght">Rentrer la longueur du chemin</string>
    <string name="string_finish">Finir &amp; Sauvegarder</string>
    <string name="String_list_vertex">List des destination de la carte\nSelectionner pour creer les chemins</string>
    <string name="string_listen_again">Ecouter</string>
    <string name="string_move_next">Destination suivante</string>
    <string name="string_cancel">Annuler, précédent</string>
    <string name="string_close">Fermer</string>
	<string name="string_list_map">List des cartes\nSelectionner pour en une</string>
</resources>
