<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="RtlHardcoded,UselessLeaf" >

    <LinearLayout
        android:id="@+id/Linear_layout_hm_veretx_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_text_nb_vertex_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_nb_vertex_left" />

        <TextView
            android:id="@+id/hm_vertex_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <EditText
        android:id="@+id/EditText_vertex_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/string_enter_vertex_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deal_vertex"
        android:text="@string/string_next" />

    <Button
        android:id="@+id/button_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show_accueil"
        android:text="@string/string_accueil" />

</TableLayout>
