<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="RtlHardcoded,UselessLeaf" >

    <Button
        android:id="@+id/button_load_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show_load"
        android:text="@string/string_android_load_map" />

    <Button
        android:id="@+id/button_create_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show_create"
        android:text="@string/string_android_create_map" />

    <Button
        android:id="@+id/button_delete_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="show_delete"
        android:text="@string/string_android_delete_map" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="close"
        android:text="@string/string_close" />

</TableLayout>
